fix flickering on initial load before JS hydrates splits

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,10 @@ main {
 	flex-direction: row;
 }
 
+main > * {
+	flex-grow: 1;
+}
+
 #editing {
 	display: flex;
 	flex-direction: column;
@@ -33,8 +37,8 @@ main {
 .container {
 	display: flex;
 	flex-direction: column;
-	flex-grow: 1;
 	overflow: hidden;
+	flex-grow: 1;
 }
 
 .container .name {
